# canvas

./: .gitignore  CMakeLists.txt  CV.cpp  CV.hpp  Core.cpp  LICENSE  Mem.cpp  README.md  SoakTest.py  Test.cpp  Test.py  changes.txt  example.cv  hola.ppm  metaprogramming_proposal.md  test.cv  test.py
docs/: Spec.md  StandardLibrary.MD
examples/: fibonacci.cv  fizzbuzz.cv  gradient.cv  pong.cv  red_circle.cv
lib/: bm.cv  bmp.cv  core.cv  file.cv  fs.cv  io.cv  json.cv  math.cv  mutators.cv  time.cv
src/: CLI.cpp  CV.cpp  CV.hpp  Context.cpp  Context.hpp  Core.cpp  Ctx.cpp  Ctx.hpp  Eval.cpp  Eval.hpp  Interpreter.cpp  Library.cpp  NT.cpp  Obj.cpp  Obj.hpp  Object.cpp  Object.hpp  Tools.cpp  Tools.hpp  canvas.cpp  cv.cpp  cv.hpp  interpreter.cpp  repl.cpp
src/libs/: bitmap.cpp  bmp.cpp  brush.hpp  core.cpp  core.cv  file.cpp  image.cpp  image.hpp  io.cpp  io.hpp  json.cpp  math.cpp  math.hpp  nixi.hpp  std.cpp  time.cpp  time.hpp
tests/: Release.py  test.py
vscode-cv-file-syntax/: README.md  language-configuration.json  package.json
vscode-cv-file-syntax/syntaxes/: canvas.tmLanguage.json
vscode-cv-file-syntax/themes/: canvas-dark-color-theme.json
